objects/SFCC_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_List_ID__c</fullName>
        <description>The SFCC Customer List ID for the storefront</description>
        <label>Customer List ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Customer_Id__c</fullName>
        <description>Default Customer ID to use when running through Guest Flow</description>
        <inlineHelpText>Default Customer ID to use when running through Guest Flow</inlineHelpText>
        <label>Default Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_ID__c</fullName>
        <description>The ID of the storefront</description>
        <inlineHelpText>The ID of the storefront</inlineHelpText>
        <label>Store ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storefront_URL__c</fullName>
        <label>Storefront URL</label>
        <type>Url</type>
    </fields>
    <label>SFCC Configuration</label>
    <pluralLabel>SFCC Configurations</pluralLabel>
</CustomObject>